--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "graphql": "^15.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
