--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
