--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
+    "inquisitor": "^0.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "react": "^18.2.0",
