--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apollo-client": "^2.6.10",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.3.0",
-    "inquisitor": "^0.0.4",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
+    "inquisitor": "^0.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "react": "^18.2.0",
