--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.6",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.3.0",
+    "graphql": "^15.8.0",
     "inquisitor": "^0.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
