--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "@apollo/server": "^4.7.1",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.2",
